// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HovercardBody /> with additional className matches its snapshot 1`] = `
<div
  className="y-hovercard--body TEST_CLASSNAME"
>
  <CustomizedBlock
    padding="xLarge"
  >
    body content
  </CustomizedBlock>
</div>
`;

exports[`<HovercardBody /> with default options matches its snapshot 1`] = `
<div
  className="y-hovercard--body"
>
  <CustomizedBlock
    padding="xLarge"
  >
    body content
  </CustomizedBlock>
</div>
`;
